--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body, html {
     padding: 0;
 }
 header {
-    height: 100%;
+    height: 60%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -28,28 +28,65 @@ header {
     padding: .5rem;
 }
 
+.title {
+    color: #1B263C;
+    padding-top: .5rem;
+    margin-bottom: 1rem;
+}
+
 .links {
     width: 100%;
     height: auto;
     background-color: #B37136;
-    padding: .5rem;
+    box-shadow: 0px 7px 10px 0px #758094;
 }
 
 .links a {
-    margin-top: .4rem;
-    height: 90%;
-    padding: 2rem;
+    height: 80%;
+    max-width: 8rem;
+    padding: 1rem;
     display: inline-block;
     color: #B37136;
-    font-size: 2rem;
+    font-size: 2.rem;
 }
 
 @media only screen and (max-width: 767px) {
     .links a {
         font-size: 1rem;
     }
+    header {
+        height: 55%;
+    }
 }
+@media only screen and (max-width: 375px) {
+    header {
+        height: 40%;
+    }
+    .logo {
+        margin-top: 1rem;
+    }
 
+    .footer {
+        margin-top: -2rem;
+    }
+    .links a {
+        font-size: .9rem;
+        padding: 0.4rem;
+    }
+}
+@media only screen and (max-width: 300px) {
+    .links a {
+        margin-top: 1rem;
+        font-size: .5rem;
+        padding: 0.2rem;
+    }
+    header {
+        height: 30%;
+    }
+    .logo {
+        margin-top: 1rem;
+    }
+}
 
 #instagram {
     background-color: #ffffff;
